[package]
name = "SensorPlotter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"]}
eframe = "0.23.0"
egui = "0.23.0"
egui_plot = "0.23.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
serde = "1.0.192"
postcard = "1.0.8"
hex = "0.4.3"
serialport = "4.2.2"